tests/baselines/reference/decoratorChecksFunctionBodies(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decoratorChecksFunctionBodies.ts(8,14): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decoratorChecksFunctionBodies.ts (1 errors) ====
    // from #2971
    function func(s: string): void {
    }
    
    class A {
        @((x, p, d) => {
            var a = 3;
            func(a);
                 ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
            return d;
        })
        m() {
    
        }
    }